--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^7.1",
         "guzzlehttp/guzzle": "^6.3",
         "psr/log": "^1.0",
-        "quartzy/courier": "^0.4.0|^0.5.0",
+        "quartzy/courier": "^0.6.0",
         "wildbit/postmark-php": "^2.3"
     },
     "require-dev": {
